; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_sms.c_xwrite.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_sms.c_xwrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@EL_IO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"z80 write [%04x] %02x\00", align 1
@Pico = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8)* @xwrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xwrite(i32 %0, i8 zeroext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  store i8 %1, i8* %4, align 1
  %5 = load i32, i32* @EL_IO, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i8, i8* %4, align 1
  %8 = call i32 @elprintf(i32 %5, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %6, i8 zeroext %7)
  %9 = load i32, i32* %3, align 4
  %10 = icmp uge i32 %9, 49152
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load i8, i8* %4, align 1
  %13 = load i8*, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico, i32 0, i32 0), align 8
  %14 = load i32, i32* %3, align 4
  %15 = and i32 %14, 8191
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds i8, i8* %13, i64 %16
  store i8 %12, i8* %17, align 1
  br label %18

18:                                               ; preds = %11, %2
  %19 = load i32, i32* %3, align 4
  %20 = icmp uge i32 %19, 65528
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load i32, i32* %3, align 4
  %23 = load i8, i8* %4, align 1
  %24 = call i32 @write_bank(i32 %22, i8 zeroext %23)
  br label %25

25:                                               ; preds = %21, %18
  ret void
}

declare dso_local i32 @elprintf(i32, i8*, i32, i8 zeroext) #1

declare dso_local i32 @write_bank(i32, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
